# pdfatlas

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
pdf_viewer/: __init__.py  main.py
pdf_viewer/core/: __init__.py  cache.py  crop.py  document.py  index.py  renderer.py  settings.py
pdf_viewer/ui/: __init__.py  canvas.py  gl_canvas.py  minimap.py  portal.py  portal_preview.py  settings.py  window.py
scripts/: categorize.py  generate_screenshots.py
