[project]
name = "pdf-reader-portals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
    "pillow>=12.3.0",
    "pygobject>=3.56.3",
    "pygobject-stubs>=2.17.0",
    "pymupdf>=1.28.0",
    "pyopengl>=3.1.10",
    "rapidfuzz>=3.14.5",
]
