[project]
name = "pdfatlas"
version = "0.1.0"
description = "PDF Reader with Search Portals and Auto-Crop"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.5.1",
    "pillow>=12.3.0",
    "pygobject>=3.56.3",
    "pygobject-stubs>=2.17.0",
    "pymupdf>=1.28.0",
    "pyopengl>=3.1.10",
    "rapidfuzz>=3.14.5",
]

[project.scripts]
pdfatlas = "pdf_viewer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdf_viewer"]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "ruff>=0.15.22",
]

[tool.ruff.lint]
ignore = ["E402"]

[tool.pyright]
reportMissingModuleSource = false


